[gd_scene load_steps=4 format=2]

[ext_resource path="res://source/interface/hud/components/AttackButton.gd" type="Script" id=1]
[ext_resource path="res://source/interface/hud/components/AttackPlate.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/interface/hud/components/DefensePlate.tscn" type="PackedScene" id=3]

[node name="AttackButton" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1505.0
margin_bottom = -1016.0
rect_min_size = Vector2( 0, 64 )
script = ExtResource( 1 )

[node name="AttackDefense" type="HBoxContainer" parent="."]
margin_right = 415.0
margin_bottom = 64.0

[node name="AttackPlate" parent="AttackDefense" instance=ExtResource( 2 )]
margin_right = 133.0
size_flags_horizontal = 3

[node name="AttackType" type="Label" parent="AttackDefense"]
margin_left = 141.0
margin_top = 19.0
margin_right = 274.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "-- Ranged --"
align = 1

[node name="DefensePlate" parent="AttackDefense" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 282.0
margin_right = 415.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="."]
margin_right = 414.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 0
flat = true
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
